--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+
+ @import 'bootstrap-sprockets';
+ @import 'bootstrap';
+ // @import 'library/nice-select';
+
+ @import 'me/reset';
+ @import 'me/fonts';
+ @import 'me/general';
+ @import 'me/layout';
