extract spinner/styles to handy-tools

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,7 +19,7 @@
  @import 'bootstrap';
  // @import 'library/nice-select';
 
- @import 'me/reset';
- @import 'me/fonts';
- @import 'me/general';
- @import 'me/layout';
+ @import 'handy-tools/styles/reset';
+ @import 'handy-tools/styles/fonts';
+ @import 'handy-tools/styles/general';
+ @import 'handy-tools/styles/layout';
