cards/tags crud

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,8 @@
                   <li><a href="/nouns">Nouns</a></li>
                   <li><a href="/verbs">Verbs</a></li>
                   <li><a href="/adjectives">Adjectives</a></li>
+                  <li><a href="/cards">Cards</a></li>
+                  <li><a href="/tags">Tags</a></li>
                 </ul>
               </div>
             </div>
