--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,10 @@
                   <li><a href="/verbs">Verbs</a></li>
                   <li><a href="/adjectives">Adjectives</a></li>
                   <li><a href="/cards">Cards</a></li>
+                  <hr />
+                  <li><a href="/quizzes">Quizzes</a></li>
+                  <li><a href="/questions">Questions</a></li>
+                  <hr />
                   <li><a href="/tags">Tags</a></li>
                 </ul>
               </div>
