--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,3 +25,5 @@
  @import 'handy-tools/styles/admin-layout';
  @import 'handy-tools/styles/admin-table';
  @import 'handy-tools/styles/sign-in';
+
+ @import 'quiz-run';
