--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,8 @@
  *= require_self
  */
 
+ $highlight-color: #013ADF;
+
  @import 'bootstrap-sprockets';
  @import 'bootstrap';
  @import 'library/nice-select';
