--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,14 +19,16 @@
               <%= button_to "Sign out", sign_out_path, { method: :delete, class: "sidebar-button" } %>
               <div id="admin-sidebar-body">
                 <ul>
+                  <li><a href="/quizzes">Quizzes</a></li>
+                  <li><a href="/questions">Questions</a></li>
                   <li><a href="/cards">Cards</a></li>
+                  <hr />
                   <li><a href="/nouns">Nouns</a></li>
                   <li><a href="/verbs">Verbs</a></li>
                   <li><a href="/adjectives">Adjectives</a></li>
                   <li><a href="/adverbs">Adverbs</a></li>
                   <hr />
-                  <li><a href="/quizzes">Quizzes</a></li>
-                  <li><a href="/questions">Questions</a></li>
+                  <li><a href="/spanish_nouns">Nouns</a></li>
                   <hr />
                   <li><a href="/tags">Tags</a></li>
                 </ul>
