--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,11 +23,13 @@
                   <li><a href="/questions">Questions</a></li>
                   <li><a href="/cards">Cards</a></li>
                   <hr />
+                  <%= image_tag("flag-india") %>
                   <li><a href="/nouns">Nouns</a></li>
                   <li><a href="/verbs">Verbs</a></li>
                   <li><a href="/adjectives">Adjectives</a></li>
                   <li><a href="/adverbs">Adverbs</a></li>
                   <hr />
+                  <%= image_tag("flag-spain") %>
                   <li><a href="/spanish_nouns">Nouns</a></li>
                   <hr />
                   <li><a href="/tags">Tags</a></li>
