--- a/app/assets/stylesheets/quiz-run.scss
+++ b/app/assets/stylesheets/quiz-run.scss
@@ -13,6 +13,11 @@
     color: black;
   }
 
+  img {
+    height: 200px;
+    margin-bottom: 30px;
+  }
+
   p.answer {
     font-size: 14px;
     margin-bottom: 5px;
