--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,6 +1,7 @@
 <% if @card %>
 
   <div id="card-details">replace me</div>
+  <div id="filestack-api-key" class="hidden"><%= ENV.fetch('FILESTACK_API_KEY') %></div>
 
 <% else %>
 
