spanish verbs and adjectives

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,8 @@
                   <hr />
                   <%= image_tag("flag-spain") %>
                   <li><a href="/spanish_nouns">Nouns</a></li>
+                  <li><a href="/spanish_verbs">Verbs</a></li>
+                  <li><a href="/spanish_adjectives">Adjectives</a></li>
                   <hr />
                   <li><a href="/tags">Tags</a></li>
                 </ul>
