add/delete match items

--- a/app/assets/stylesheets/card-details.scss
+++ b/app/assets/stylesheets/card-details.scss
@@ -3,4 +3,20 @@
   img {
     width: 100%;
   }
+
+  tr.item-row {
+
+    > td {
+      padding-left: 30px;
+    }
+
+    .x-column {
+      background-size: 15px;
+    }
+  }
+
+  .plus-column {
+    background-image: image-url("plus.svg");
+    background-size: 20px;
+  }
 }
