fix margin bottom on bins

--- a/app/assets/stylesheets/quiz-run.scss
+++ b/app/assets/stylesheets/quiz-run.scss
@@ -58,6 +58,7 @@
       user-select: none;
       vertical-align: top;
       text-align: center;
+      margin-bottom: 15px;
 
       &.selected {
         background-color: #CEECF5;
