add question description option

--- a/app/assets/stylesheets/quiz-run.scss
+++ b/app/assets/stylesheets/quiz-run.scss
@@ -19,6 +19,11 @@
     color: black;
   }
 
+  p.description {
+    margin-top: -20px;
+    margin-bottom: 20px;
+  }
+
   img {
     height: 200px;
     margin-bottom: 30px;
