add vocabulary bulk import

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,6 +31,8 @@ $imgpath: 'handy-components/images';
 @import 'handy-components/styles/admin-table';
 @import 'handy-components/styles/modal-select';
 
+@import 'job-status';
+@import 'vocabulary';
 @import 'quiz-details';
 @import 'quiz-run';
 
