--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,7 @@
                   <li><a href="/spanish_verbs">Verbs</a></li>
                   <li><a href="/spanish_adjectives">Adjectives</a></li>
                   <hr />
+                  <li><a href="/vocabulary">Vocabulary</a></li>
                   <li><a href="/questions">Questions</a></li>
                   <li><a href="/tags">Tags</a></li>
                 </ul>
