--- a/app/assets/stylesheets/quiz-run.scss
+++ b/app/assets/stylesheets/quiz-run.scss
@@ -65,6 +65,22 @@
     cursor: pointer;
   }
 
+  div.unarchive-button-container {
+    float: right;
+    position: relative;
+
+    div.unarchive-button {
+      position: absolute;
+      background-image: image-url('no.svg');
+      background-size: 100%;
+      width: 50px;
+      height: 50px;
+      left: -12px;
+      top: -10px;
+      cursor: pointer;
+    }
+  }
+
   div.highlight-button {
     margin-top: 2px;
     float: right;
