--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,7 +28,9 @@ $imgpath: 'handy-components/images';
 @import 'handy-tools/styles/sign-in';
 
 @import 'handy-components/styles/admin-layout';
+@import 'handy-components/styles/admin-layout-rails';
 @import 'handy-components/styles/admin-table';
+@import 'handy-components/styles/admin-table-rails';
 @import 'handy-components/styles/modal-select';
 
 @import 'job-status';
