--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
       <body>
         <div id="admin-framework">
           <div id="admin-row" class="row">
+            <div id="admin-sidebar-background" class="col-xs-2"></div>
             <div id="admin-sidebar" class="col-xs-2 match-height-layout">
               <%= button_to "Sign out", sign_out_path, { method: :delete, class: "sidebar-button" } %>
               <div id="admin-sidebar-body">
