--- a/app/assets/stylesheets/quiz-details.scss
+++ b/app/assets/stylesheets/quiz-details.scss
@@ -1,5 +1,9 @@
 #quiz-details {
 
+  .admin-table th {
+    padding-bottom: 15px;
+  }
+
   .admin-table tr.wide-arrows {
 
     .amount {
@@ -8,6 +12,12 @@
 
     &.red td {
       color: red;
+      font-family: 'TeachableSans-SemiBold';
+    }
+
+    &.green td {
+      color: green;
+      font-family: 'TeachableSans-SemiBold';
     }
   }
 
@@ -26,6 +36,25 @@
   .amount {
     text-align: center;
     width: 60px;
+  }
+
+  .unarchived, .archived {
+    width: 75px;
+
+    div.archived-header {
+      background-image: image-url('archive.svg');
+      margin-right: 20px;
+      width: 25px;
+      height: 25px;
+    }
+
+    div.unarchived-header {
+      background-image: image-url('highlighter.jpg');
+      background-size: 90%;
+      margin-right: 20px;
+      width: 25px;
+      height: 25px;
+    }
   }
 
   .right-arrow, .left-arrow {
