--- a/app/assets/stylesheets/quiz-run.scss
+++ b/app/assets/stylesheets/quiz-run.scss
@@ -107,10 +107,13 @@
     display: inline-block;
     width: inherit;
     margin-right: 10px;
+    vertical-align: top;
   }
 
   label {
+    vertical-align: top;
     font-size: 14px;
+    width: calc(100% - 23px);
   }
 
   .bins-container {
