--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,7 @@
                   <li><a href="/spanish_nouns">Nouns</a></li>
                   <li><a href="/spanish_verbs">Verbs</a></li>
                   <li><a href="/spanish_adjectives">Adjectives</a></li>
+                  <li><a href="/spanish_miscs">Miscellaneous</a></li>
                   <hr />
                   <li><a href="/vocabulary">Vocabulary</a></li>
                   <li><a href="/questions">Questions</a></li>
