--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,12 @@
                   <li><a href="/quizzes">Quizzes</a></li>
                   <li><a href="/cards">Cards</a></li>
                   <hr />
+                  <%= image_tag("flag-france") %>
+                  <li><a href="/french_nouns">Nouns</a></li>
+                  <li><a href="/french_verbs">Verbs</a></li>
+                  <li><a href="/french_adjectives">Adjectives</a></li>
+                  <li><a href="/french_miscs">Miscellaneous</a></li>
+                  <hr />
                   <%= image_tag("flag-spain") %>
                   <li><a href="/spanish_nouns">Nouns</a></li>
                   <li><a href="/spanish_verbs">Verbs</a></li>
