--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,3 +1,7 @@
+html, body {
+  height: 100%;
+}
+
 #admin-framework {
     height: 100%;
 
@@ -51,6 +55,7 @@
 
       #admin-right-column {
         padding: 0;
+        height: 100%;
 
         #admin-navbar {
           position: relative;
