cities/countries - nav menu, route/controllers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,8 @@
                   <li><a href="/french_nouns">Nouns</a></li>
                   <li><a href="/french_verbs">Verbs</a></li>
                   <li><a href="/french_adjectives">Adjectives</a></li>
+                  <li><a href="/french_countries">Countries</a></li>
+                  <li><a href="/french_cities">Cities</a></li>
                   <li><a href="/french_miscs">Miscellaneous</a></li>
                   <hr />
                   <%= image_tag("flag-spain") %>
